--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
       <button class="btn--pastga btn"><</button>
     </div>
     <div class="grid__group">
-      <div class="left"></div>
+      <div class="left">
+        <div class="box box-1">
+          <h2 class="text">Malibo Turbo</h2>
+        </div>
+        <div class="box box-2">
+          <h2 class="text">Rance Rover</h2>
+        </div>
+        <div class="box box-3">
+          <h2 class="text">Malibo Turbo</h2>
+        </div>
+        <div class="box box-4"><h2 class="text">Malibo Turbo</h2></div>
+      </div>
       <div class="right">
         <img src="./qizil malibo.jpg" alt="malibo" class="img-1" />
         <img src="./oq  malibo.jpg" alt="malibo" class="img-1" /><img
